11.1.1
-------
(RB=996078)
Capture the @Deprecated trait of finder and action parameters in IDL.

11.1.0
-------
(RB=998716)
Added backup requests.

11.0.18
-------
(RB=1024125)
Added sslIdleTimeout to PropertyKeys and TransportClientPropertiesConverter

Update pegasus version to newly released 11.0.17 for opensource quickstart project.

11.0.17
-------
(RB=1017503)
Added sslIdleTimeout to the d2-schemas

(RB=1005627)
Added D2 State WarmUp feature

(RB=1015159)
Fix pegasus plugin configuration to include the jdk tools jar.

11.0.16
-------
(RB=1019823)
Expose collection metadata projection mask in FilterRequestContext.

11.0.15
-------

11.0.14
-------

11.0.13
-------
(RB=1008758)
Typo in the test file : test-util/src/main/java/com/linkedin/test/util/GaussianRandom.java

(RB=1002213)
generateRestModel doesn't need a copy of the codegen classpath

(RB=1010209)
Changes to handle Restli info chatty output

11.0.12
-------

11.0.11
-------
(RB=1008894)
HttpClientFactory.Builder, added documentation and improved to handle more easily more cases

11.0.10
-------
(RB=1008069)
Make tcpNoDelay constructor's change backward compatible in HttpClientFactory

(RB=1001008)
Make check tasks incremental

(RB=1001187)
Honor ErrorResponseFormat for exception thrown within multiplexer (or by multiplexer filter).

(RB=994715)
Add D2Monitor to support D2Event

(RB=972175)
Make AsyncPoolImpl consistent returning a Cancellable but cannot be cancelled instead of null

11.0.9
------
(RB=991779)
Moving ChannelPoolManager sensors from ServiceName-based to be composed by Custom Prefix and Hash of transport properties

11.0.8
------
(RB=998274)
generateRestModel should be more strict about running

(RB=987245)
Fixed log message formatting in SimpleLoadBalancerState.

(RB=979967)
Add field aliases, field order, and include after support to PDL.
Fix PDSC to serialize include after fields if include was after fields in original schema declaration.

(RB=988572)